# fastapi-ocr

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/ocr/: models.py  router.py  schemas.py  services.py
app/core/: celery_config.py  config.py  database.py
